4 - add endpoint, schema and logic for adding log rows to dataset (#219)
* add dataset and logs uuid as foreign keys to the Dataset and Logs table

* update postgres schema

* regenerate schema

* LF

* CRLF

* update dynamic dataset coulmn  definition

* update dynamic log  coulmn  definition

* add endpoint, schema and logic for adding log rows to dataset

* fix build

* add many to many relationshipt between dataset and logs

* add dataset and logs uuid as foreign keys to the Dataset and Logs table

* update postgres schema

* regenerate schema

* LF

* CRLF

* update dynamic dataset coulmn  definition

* fix build

* remove old migration

* cleanup prisma schema

* cleanup

* cleanup and fixes

* fix logs prisma operations

* fix build

* regernerate swagger json

* fix build

* update dataset column type check

* fix deploy

* fix issue with assigning logs rel to dataset

* update swagger

* ensure dataset relationship is properly set

* add copy to dataset logic, update add data schema

* fix setting create_at Date column for dataset

* fix issue with updating logs table dataset reference

* fix build
